# resmon-tui

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.bat  install.sh
src/: app.rs  main.rs
src/ui/: confirmation.rs  cpu.rs  details.rs  gpu.rs  help.rs  mod.rs  processes.rs  status_bar.rs  toast.rs
